# depguard

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/cli/: Cargo.toml
