[workspace]
members = [
    "crates/cli"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "GPL-3.0-only"
repository = "https://github.com/Hobr/depguard"

[workspace.dependencies]
# Agent
rig-core = "0.39.0"

# 异步运行时
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["time", "rt"] }
async-trait = "0.1"

# CLI
clap = { version = "4.6", features = ["derive", "env", "string", "unicode"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 构建
shadow-rs = { version = "2.0", features = ["cargo_metadata"] }
